--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,66 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<header class="container">
+  <h1 class="text-center logo">{{title}}</h1>
+  <h6 class="text-center tagline">A place to store your dreams...</h6>
+  <br>
+</header>
+<main class="container">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" href="#login">Log In</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#signup">Sign Up</a>
+            </li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <div class="tab-content">
+            <div class="tab-pane active" id="login" role="tabpanel">
+              <form id="login-form">
+                <br>
+                <div class="form-group">
+                  <label for="username">Username</label>
+                  <input type="text" class="form-control" id="username" placeholder="username">
+                </div>
+                <div class="form-group">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" id="password" placeholder="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Log In</button>
+              </form>
+            </div>
+            <div class="tab-pane" id="signup" role="tabpanel">
+              <form id="signup-form">
+                <br>
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email" placeholder="email@example.com">
+                </div>
+                <div class="form-group">
+                  <label for="username-new">Username</label>
+                  <input type="text" class="form-control" id="username-new" placeholder="username">
+                </div>
+                <div class="form-group">
+                  <label for="password-new">Password</label>
+                  <input type="password" class="form-control" id="password-new" placeholder="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Sign Up</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="col-12 col-md-6">
+      <div class="card">
+      </div>
+    </div> -->
+  </div>
+</main>
+<footer class="container">
+
+</footer>
