--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
-<div class="row justify-content-center">
+<!-- <div class="row justify-content-center">
   <h6 class="tagline">A place to store your dreams...</h6>
-</div>
+</div> -->
 <br>
 <div class="row justify-content-center">
   <div class="col-12">
