--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,15 +11,21 @@
     <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
-    <header>
-      <div class="container justify-content-center">
-        <h1 class="text-center brand"><a class="nav-link" href="./">Dream Catcher</a></h1>
+    <header class="container">
+      <div class="brand text-center">
+        <a class="navbar-brand" href="./">
+          <img src="./images/dream-catcher.png" width="80" height="80">
+          Dream Catcher
+        </a>
       </div>
     </header>
     <main class="container">
       {{{body}}}
     </main>
-    <footer></footer>
+    <footer class="container">
+      <!-- <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
+      <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/zlatko-najdenovski" title="Zlatko Najdenovski">Zlatko Najdenovski</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
