--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,19 +10,19 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
   </head>
-  <body>
-    <header class="container">
+  <body class="container">
+    <header>
       <div class="brand text-center">
         <a class="navbar-brand" href="./">
-          <img src="./images/dream-catcher.png" width="80" height="80">
+          <img src="./images/dream-catcher.png" width="50" height="50">
           Dream Catcher
         </a>
       </div>
     </header>
-    <main class="container">
+    <main>
       {{{body}}}
     </main>
-    <footer class="container">
+    <footer>
       <!-- <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
       <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/zlatko-najdenovski" title="Zlatko Najdenovski">Zlatko Najdenovski</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
     </footer>
