--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,6 @@
-<!-- <div class="row justify-content-center">
-  <h6 class="tagline">A place to store your dreams...</h6>
-</div> -->
 <br>
 <div class="row justify-content-center">
-  <div class="col-12">
+  <div class="col-sm-8">
     <div class="card">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
@@ -21,11 +18,11 @@
             <form id="login-form">
               <br>
               <div class="row">
-                <div class="form-group col-12 col-md-6">
+                <div class="form-group col-sm-6">
                   <label for="username">Username</label>
                   <input type="text" class="form-control" id="username" placeholder="username">
                 </div>
-                <div class="form-group col-12 col-md-6">
+                <div class="form-group col-sm-6">
                   <label for="password">Password</label>
                   <input type="password" class="form-control" id="password" placeholder="password">
                 </div>
@@ -37,15 +34,15 @@
             <form id="signup-form">
               <br>
               <div class="row">
-                <div class="form-group col-12 col-md-4">
+                <div class="form-group col-sm-4">
                   <label for="email">Email</label>
                   <input type="email" class="form-control" id="email" placeholder="email@example.com">
                 </div>
-                <div class="form-group col-12 col-md-4">
+                <div class="form-group col-sm-4">
                   <label for="username-new">Username</label>
                   <input type="text" class="form-control" id="username-new" placeholder="username">
                 </div>
-                <div class="form-group col-12 col-md-4">
+                <div class="form-group col-sm-4">
                   <label for="password-new">Password</label>
                   <input type="password" class="form-control" id="password-new" placeholder="password">
                 </div>
@@ -58,19 +55,3 @@
     </div>
   </div>
 </div>
-<!-- <div class="row justify-content-center">
-  <div class="col-12 col-md-6">
-    <div class="card">
-      <div class="card-header">
-        <h5>Dream Types</h5>
-      </div>
-      <div class="card-body">
-        <ul>
-        {{#each dreamTypes}}
-          <li><b>{{name}}: </b>{{description}}</li>
-        {{/each}}
-        </ul>
-      </div>
-    </div>
-  </div>
-</div> -->
