--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,21 +10,26 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css">
   </head>
-  <body class="container">
+  <body>
     <header>
-      <div class="brand text-center">
-        <a class="navbar-brand" href="./">
-          <img src="./images/dream-catcher.png" width="50" height="50">
-          Dream Catcher
-        </a>
-      </div>
+      <nav class="navbar sticky-top navbar-dark">
+        <div class="container row justify-content-center">
+          <a class="navbar-brand logo" href="./">
+            <img src="./images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
+            Dream Catcher
+          </a>
+        </div>
+      </nav>
     </header>
-    <main>
+    <main class="container">
       {{{body}}}
     </main>
     <footer>
-      <!-- <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
-      <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/zlatko-najdenovski" title="Zlatko Najdenovski">Zlatko Najdenovski</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
+      <nav class="navbar fixed-bottom navbar-dark">
+        <div class="container row">
+          <!-- <p class="navbar-text text-align-center">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p> -->
+        </div>
+      </nav>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
