--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,6 @@
-<br>
-<div class="row justify-content-center">
-  <div class="col-sm-8">
-    <div class="card">
+<div class="row align-items-center justify-content-center">
+  <div class="col-sm-10">
+    <div class="card bg-light mb-3">
       <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
           <li class="nav-item">
