--- a/views/dreams.hbs
+++ b/views/dreams.hbs
@@ -1,69 +1,86 @@
-<br>
-<div class="row justify-content">
-  <div class="col-sm-8">
-    <div class="card bg-light mb-3">
-      <div class="card-header">
-        <ul class="nav nav-tabs card-header-tabs">
-          <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#my-dreams">My Dreams</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" data-toggle="tab" href="#dream-types">Dream Types</a>
-          </li>
-        </ul>
-      </div>
-      <div class="card-body main">
-        <div class="tab-content">
-          <div class="tab-pane active" id="my-dreams" role="tabpanel">
-            <dl>
-            {{#each mydreams}}
-              <dt>{{date}} / {{category_name}}</dt>
-              <dd>{{description}}</dd>
-            {{/each}}
-            </dl>
-          </div>
-          <div class="tab-pane" id="dream-types" role="tabpanel">
-            <dl>
-            {{#each dreamTypes}}
-              <dt>{{name}}</dt>
-              <dd>{{description}}</dd>
-            {{/each}}
-            </dl>
-            <dl>
-            </dl>
+<header>
+  <nav class="navbar navbar-dark">
+    <div class="container">
+      <a class="navbar-brand logo" href="./">
+        <img src="./images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
+        Dream Catcher
+      </a>
+      <button id="logout" class="btn btn-primary nav-link p2">Log Out</button>
+    </div>
+  </nav>
+</header>
+<main class="container">
+  <div class="row justify-content">
+    <div class="col-sm-8">
+      <div class="card bg-light mb-3">
+        <div class="card-header">
+          <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" href="#my-dreams">My Dreams</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#dream-types">Categories</a>
+            </li>
+          </ul>
+        </div>
+        <div class="card-body main">
+          <div class="tab-content">
+            <div class="tab-pane active" id="my-dreams" role="tabpanel">
+              <dl id="dreams">
+              {{#each dreams}}
+                <dt>{{date}} / {{category_name}}</dt>
+                <dd>{{description}}</dd>
+              {{/each}}
+              </dl>
+            </div>
+            <div class="tab-pane" id="dream-types" role="tabpanel">
+              <dl>
+              {{#each dreamTypes}}
+                <dt>{{name}}</dt>
+                <dd>{{description}}</dd>
+              {{/each}}
+              </dl>
+              <dl>
+              </dl>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-sm-4">
-    <div class="card bg-light mb-3">
-      <div class="card-header">
-        <h5>Add New Dream</h5>
-      </div>
-      <div class="card-body main">
-        <form id="new-dream">
-          <div class="row">
-            <div class="form-group col">
-              <select class="custom-select" name="">
-                <option selected>Choose Category</option>
-                {{#each dreamTypes}}
-                <option value="{{id}}">{{name}}</option>
-                {{/each}}
-              </select>
+    <div class="col-sm-4">
+      <div class="card bg-light mb-3">
+        <div class="card-header">
+          <h5>Add New Dream</h5>
+        </div>
+        <div class="card-body main">
+          <form id="new-dream">
+            <div class="row">
+              <div class="form-group col">
+                <select class="custom-select" name="">
+                  <option selected>Choose Category</option>
+                  {{#each dreamTypes}}
+                  <option value="{{id}}">{{name}}</option>
+                  {{/each}}
+                </select>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="form-group col">
-              <label for="description">Description</label>
-              <textarea class="form-control" id="description" rows="5"
-              placeholder="Describe your dream...">
-              </textarea>
+            <div class="row">
+              <div class="form-group col">
+                <label for="description">Description</label>
+                <textarea class="form-control" id="description" rows="5"
+                placeholder="Describe your dream...">
+                </textarea>
+              </div>
             </div>
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</main>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+<script src="../scripts/dreams.js"></script>
