--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,6 +15,10 @@ a.navbar-brand {
   color: white;
 }
 
+a.nav-link {
+  color: rgba(255,255,255,.5);
+}
+
 a.nav-link.active {
   background-color: inherit !important;
   border-bottom-color: rgb(246, 247, 249) !important;
