show dreams by user

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -42,7 +42,7 @@ a.nav-link.active {
   background: none;
 }
 
-.btn.btn-primary {
+.btn.btn-primary, .badge {
   background-color: #8000FF;
   border: none;
 }
