post new dream route

--- a/views/dreams.hbs
+++ b/views/dreams.hbs
@@ -64,7 +64,7 @@
           <form id="new-dream">
             <div class="row">
               <div class="form-group col">
-                <select class="custom-select" name="">
+                <select class="custom-select" id="select">
                   <option selected>Choose Category</option>
                   <option value="1">Normal</option>
                   <option value="2">Daydream</option>
@@ -83,7 +83,7 @@
                 </textarea>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button id="user" type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
       </div>
