--- a/views/dreams.hbs
+++ b/views/dreams.hbs
@@ -90,3 +90,17 @@
     </div>
   </div>
 </main>
+<footer>
+  <div class="navbar navbar-dark" style="background-color: rgb(53, 51, 57)">
+    <div class="container">
+      <span class="navbar-text">
+        <p>A jourmal for your dreams. 🌙</p>
+        <small>© 2017 Maria Jose Mata</small>
+      </span>
+      <nav class="nav">
+        <a class="nav-link" href="#">GitHub Repo</a>
+        <a class="nav-link" href="#">Portfolio</a>
+      </nav>
+    </div>
+  </div>
+</footer>
