--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,6 +11,8 @@
   </nav>
 </header>
 <main class="container">
+  <div class="home-space">
+  </div>
   <div class="row align-items-center justify-content-center">
     <div class="col-sm-10">
       <div class="card bg-light mb-3">
@@ -74,3 +76,17 @@
     </div>
   </div>
 </main>
+<footer>
+  <div class="navbar fixed-bottom navbar-dark" style="background-color: rgb(53, 51, 57)">
+    <div class="container">
+      <span class="navbar-text">
+        <p>A jourmal for your dreams. 🌙</p>
+        <small>© 2017 Maria Jose Mata</small>
+      </span>
+      <nav class="nav">
+        <a class="nav-link" href="#">GitHub Repo</a>
+        <a class="nav-link" href="#">Portfolio</a>
+      </nav>
+    </div>
+  </div>
+</footer>
