--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,6 +11,10 @@ a.navbar-brand.logo {
   font-weight: bold;
 }
 
+.home-space {
+  height: 2vh;
+}
+
 #login-error, #signup-error {
   display: none;
 }
