fix footer typo

--- a/views/dreams.hbs
+++ b/views/dreams.hbs
@@ -94,7 +94,7 @@
   <div class="navbar navbar-dark" style="background-color: rgb(53, 51, 57)">
     <div class="container">
       <span class="navbar-text">
-        <p>A jourmal for your dreams. 🌙</p>
+        <p>A journal for your dreams. 🌙</p>
         <small>© 2017 Maria Jose Mata</small>
       </span>
       <nav class="nav">
