--- a/views/index.hbs
+++ b/views/index.hbs
@@ -80,7 +80,7 @@
   <div class="navbar fixed-bottom navbar-dark" style="background-color: rgb(53, 51, 57)">
     <div class="container">
       <span class="navbar-text">
-        <p>A jourmal for your dreams. 🌙</p>
+        <p>A journal for your dreams. 🌙</p>
         <small>© 2017 Maria Jose Mata</small>
       </span>
       <nav class="nav">
