--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,8 +11,8 @@ a.navbar-brand.logo {
   font-weight: bold;
 }
 
-.home-space {
-  height: 2vh;
+main.container {
+  margin: 2vh 0;
 }
 
 #login-error, #signup-error {
@@ -35,6 +35,11 @@ a.nav-link.active {
 .card a {
   color: #8000FF;
   font-weight: bold !important;
+}
+
+.card-body.index {
+  max-height: 41vh;
+  overflow: scroll;
 }
 
 .card-body.main {
