--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,8 +11,6 @@
   </nav>
 </header>
 <main class="container">
-  <div class="home-space">
-  </div>
   <div class="row align-items-center justify-content-center">
     <div class="col-sm-10">
       <div class="card bg-light mb-3">
@@ -26,7 +24,7 @@
             </li>
           </ul>
         </div>
-        <div class="card-body">
+        <div class="card-body index">
           <div class="tab-content">
             <div class="tab-pane active" id="login" role="tabpanel">
               <form id="login-form">
