--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,35 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<header>
+  <nav class="navbar navbar-dark">
+    <div class="container">
+      <div class="col-sm-12" align="center">
+        <a class="navbar-brand logo" href="./">
+          <img src="./images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
+          Dream Catcher
+        </a>
+      </div>
+    </div>
+  </nav>
+</header>
+<main class="container">
+  <h2 class="text-white text-center"><span class="badge">{{error.status}}</span></h2>
+  <h3 class="text-white text-center">{{message}}</h3>
+  <div class="row justify-content-center">
+    <img class="rounded mx-auto d-block" src="./images/giphy-downsized.gif"
+     width="250" height="250"  alt="Sleepy Moon">
+  </div>
+  <div style="height: 5vh;"></div>
+</main>
+<footer>
+  <div class="navbar fixed-bottom navbar-dark" style="background-color: rgb(53, 51, 57)">
+    <div class="container">
+      <span class="navbar-text">
+        <p>A journal for your dreams. 🌙</p>
+        <small>© 2017 Maria Jose Mata</small>
+      </span>
+      <nav class="nav">
+        <a class="nav-link" href="#">GitHub Repo</a>
+        <a class="nav-link" href="#">Portfolio</a>
+      </nav>
+    </div>
+  </div>
+</footer>
