footer links update

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -27,8 +27,8 @@
         <small>© 2017 Maria Jose Mata</small>
       </span>
       <nav class="nav">
-        <a class="nav-link" href="#">GitHub Repo</a>
-        <a class="nav-link" href="#">Portfolio</a>
+        <a class="nav-link" href="https://github.com/maria-mata/dream-catcher" target="_blank">GitHub Repo</a>
+        <a class="nav-link" href="https://mjmata.com/" target="_blank">Portfolio</a>
       </nav>
     </div>
   </div>
