--- a/views/index.hbs
+++ b/views/index.hbs
@@ -83,7 +83,7 @@
       </span>
       <nav class="nav">
         <a class="nav-link" href="https://github.com/maria-mata/dream-catcher" target="_blank">GitHub Repo</a>
-        <a class="nav-link" href="https://mjmata.com/" target="_blank">Portfolio</a>
+        <!-- <a class="nav-link" href="https://mjmata.com/" target="_blank">Portfolio</a> -->
       </nav>
     </div>
   </div>
