--- a/views/dreams.hbs
+++ b/views/dreams.hbs
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-dark">
     <div class="container">
       <a class="navbar-brand logo" href="./">
-        <img src="./images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
+        <img src="/images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
         Dream Catcher
       </a>
       <button id="logout" class="btn btn-primary nav-link p2">Log Out</button>
