--- a/views/error.hbs
+++ b/views/error.hbs
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="col-sm-12" align="center">
         <a class="navbar-brand logo" href="./">
-          <img src="./images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
+          <img src="/images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
           Dream Catcher
         </a>
       </div>
@@ -14,7 +14,7 @@
   <h2 class="text-white text-center"><span class="badge">{{error.status}}</span></h2>
   <h3 class="text-white text-center">{{message}}</h3>
   <div class="row justify-content-center">
-    <img class="rounded mx-auto d-block" src="./images/giphy-downsized.gif"
+    <img class="rounded mx-auto d-block" src="/images/giphy-downsized.gif"
      width="250" height="250"  alt="Sleepy Moon">
   </div>
   <div style="height: 5vh;"></div>
