--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="col-sm-12" align="center">
         <a class="navbar-brand logo" href="./">
-          <img src="./images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
+          <img src="/images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
           Dream Catcher
         </a>
       </div>
@@ -84,6 +84,8 @@
       <nav class="nav">
         <a class="nav-link" href="https://github.com/maria-mata/dream-catcher" target="_blank">GitHub Repo</a>
         <!-- <a class="nav-link" href="https://mjmata.com/" target="_blank">Portfolio</a> -->
+        <!-- <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
+        <!-- <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
       </nav>
     </div>
   </div>
