--- a/views/error.hbs
+++ b/views/error.hbs
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-dark">
     <div class="container">
       <div class="col-sm-12" align="center">
-        <a class="navbar-brand logo" href="./">
+        <a class="navbar-brand logo" href="/">
           <img src="/images/dream-catcher.png" width="75" height="75" class="d-inline-block align-top" alt="">
           Dream Catcher
         </a>
@@ -19,17 +19,20 @@
   </div>
   <div style="height: 5vh;"></div>
 </main>
-<footer>
-  <div class="navbar fixed-bottom navbar-dark" style="background-color: rgb(53, 51, 57)">
-    <div class="container">
-      <span class="navbar-text">
-        <p>A journal for your dreams. 🌙</p>
-        <small>© 2017 Maria Jose Mata</small>
-      </span>
-      <nav class="nav">
-        <a class="nav-link" href="https://github.com/maria-mata/dream-catcher" target="_blank">GitHub Repo</a>
-        <a class="nav-link" href="https://mjmata.com/" target="_blank">Portfolio</a>
-      </nav>
-    </div>
+<footer class="navbar fixed-bottom navbar-dark" style="background-color: rgb(53, 51, 57)">
+  <div class="container">
+    <span class="navbar-text">
+      <p>A journal for your dreams. 🌙</p>
+      <small>© 2017 Maria Jose Mata</small>
+      <br>
+      <small>Icon by <a href="http://www.freepik.com" target="_blank">Freepik</a>
+        from <a href="https://www.flaticon.com/" target="_blank">Flaticon</a>
+        licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">
+        CC 3.0 BY</a></small>
+    </span>
+    <nav class="nav">
+      <a class="nav-link" href="https://github.com/maria-mata/dream-catcher" target="_blank">GitHub Repo</a>
+      <!-- <a class="nav-link" href="https://mjmata.com/" target="_blank">Portfolio</a> -->
+    </nav>
   </div>
 </footer>
