styling footer links

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -37,6 +37,15 @@ a.nav-link.active {
   font-weight: bold !important;
 }
 
+small a {
+  color: inherit;
+  font-weight: bold;
+}
+
+small a:hover {
+  color: inherit;
+}
+
 .card-body.index {
   height: 40vh;
   overflow: scroll;
